Cropper widget buttons margin fix

--- a/www/static/develop/css/css.css
+++ b/www/static/develop/css/css.css
@@ -765,7 +765,7 @@ select{background-color: #FFFFFF;border: 1px solid #C3C3C3;padding:2px 10px;heig
 /* end pages */
 
 .cropper-actions{margin-top: 5px;}
-.cropper-actions .btn{margin-right: 5px;}
+.cropper-actions .btn{margin: 3px 3px 3px 0px;}
 
 @media (max-width: 992px){
 	.top-line{height: auto;}
